force-app/main/default/objects/SentinelFlow_Settings__c/SentinelFlow_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global settings for the SentinelFlow Reliability Platform.</description>
    <label>SentinelFlow Settings</label>
</CustomObject>