force-app/main/default/objects/SentinelFlow_Settings__c/fields/Alert_Severity__c.field-meta.xml
<CustomField>
    <fullName>Alert_Severity__c</fullName>
    <label>Alert Severity Filter</label>
    <type>Text</type>
    <length>20</length>
</CustomField>