force-app/main/default/objects/SentinelFlow_Settings__c/fields/Auto_Escalate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Escalate__c</fullName>
    <label>Auto-Escalate Critical Incidents</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>