force-app/main/default/objects/SentinelFlow_Settings__c/fields/Autonomous_Healing__c.field-meta.xml
<CustomField>
    <fullName>Autonomous_Healing__c</fullName>
    <label>Autonomous Healing</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>