force-app/main/default/objects/SentinelFlow_Settings__c/fields/Circuit_Breaker_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Breaker_Threshold__c</fullName>
    <label>Circuit Breaker Threshold (Failures)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>5</defaultValue>
</CustomField>