force-app/main/default/objects/SentinelFlow_Settings__c/fields/Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Threshold__c</fullName>
    <label>AI Confidence Threshold (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>85</defaultValue>
</CustomField>