force-app/main/default/objects/SentinelFlow_Settings__c/fields/Enable_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Enable_Alerts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable all outbound alerts (Slack/Email).</description>
    <label>Enable Alerts</label>
    <type>Checkbox</type>
</CustomField>