force-app/main/default/objects/SentinelFlow_Settings__c/fields/Endpoint_Active__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Global kill switch for the Incident REST API endpoint.</description>
    <label>Endpoint Active</label>
    <type>Checkbox</type>
</CustomField>