force-app/main/default/objects/SentinelFlow_Settings__c/fields/Max_Retry__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of times an incident will attempt self-healing before escalation.</description>
    <label>Max Retry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>