force-app/main/default/objects/SentinelFlow_Settings__c/fields/Notify_On_Heal__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Heal__c</fullName>
    <label>Notify on Successful Heal</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>