force-app/main/default/objects/SentinelFlow_Settings__c/fields/Silent_Failure_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Silent_Failure_Minutes__c</fullName>
    <label>Silent Failure Window (Min)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>30</defaultValue>
</CustomField>