force-app/main/default/objects/SentinelFlow_Settings__c/fields/Slack_Webhook_Path__c.field-meta.xml
<CustomField>
    <fullName>Slack_Webhook_Path__c</fullName>
    <label>Slack Webhook Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>