force-app/main/default/objects/SentinelFlow_Settings__c/fields/Teams_Webhook_Path__c.field-meta.xml
<CustomField>
    <fullName>Teams_Webhook_Path__c</fullName>
    <label>Teams Webhook Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>